[tool.poetry]
name = "CppHelper"
version = "0.1.0"
description = ""
authors = ["dotchris90 <christian.kahr@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.9"
cleo = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
cpp-help = 'cpphelper.__main__:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
